; ModuleID = '/home/carl/AnghaBench/linux/drivers/dma/dw-axi-dmac/extr_dw-axi-dmac-platform.c_axi_chan_dump_lli.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/dma/dw-axi-dmac/extr_dw-axi-dmac-platform.c_axi_chan_dump_lli.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.axi_dma_chan = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }
%struct.axi_dma_desc = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32, i32, i32, i32, i32, i32 }

@.str = private unnamed_addr constant [60 x i8] c"SAR: 0x%llx DAR: 0x%llx LLP: 0x%llx BTS 0x%x CTL: 0x%x:%08x\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.axi_dma_chan*, %struct.axi_dma_desc*)* @axi_chan_dump_lli to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @axi_chan_dump_lli(%struct.axi_dma_chan* %0, %struct.axi_dma_desc* %1) #0 {
  %3 = alloca %struct.axi_dma_chan*, align 8
  %4 = alloca %struct.axi_dma_desc*, align 8
  store %struct.axi_dma_chan* %0, %struct.axi_dma_chan** %3, align 8
  store %struct.axi_dma_desc* %1, %struct.axi_dma_desc** %4, align 8
  %5 = load %struct.axi_dma_chan*, %struct.axi_dma_chan** %3, align 8
  %6 = getelementptr inbounds %struct.axi_dma_chan, %struct.axi_dma_chan* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = call i32 @dchan2dev(i32* %7)
  %9 = load %struct.axi_dma_desc*, %struct.axi_dma_desc** %4, align 8
  %10 = getelementptr inbounds %struct.axi_dma_desc, %struct.axi_dma_desc* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 5
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @le64_to_cpu(i32 %12)
  %14 = load %struct.axi_dma_desc*, %struct.axi_dma_desc** %4, align 8
  %15 = getelementptr inbounds %struct.axi_dma_desc, %struct.axi_dma_desc* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 4
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @le64_to_cpu(i32 %17)
  %19 = load %struct.axi_dma_desc*, %struct.axi_dma_desc** %4, align 8
  %20 = getelementptr inbounds %struct.axi_dma_desc, %struct.axi_dma_desc* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 3
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @le64_to_cpu(i32 %22)
  %24 = load %struct.axi_dma_desc*, %struct.axi_dma_desc** %4, align 8
  %25 = getelementptr inbounds %struct.axi_dma_desc, %struct.axi_dma_desc* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @le32_to_cpu(i32 %27)
  %29 = load %struct.axi_dma_desc*, %struct.axi_dma_desc** %4, align 8
  %30 = getelementptr inbounds %struct.axi_dma_desc, %struct.axi_dma_desc* %29, i32 0, i32 0
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @le32_to_cpu(i32 %32)
  %34 = load %struct.axi_dma_desc*, %struct.axi_dma_desc** %4, align 8
  %35 = getelementptr inbounds %struct.axi_dma_desc, %struct.axi_dma_desc* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = call i32 @le32_to_cpu(i32 %37)
  %39 = call i32 @dev_err(i32 %8, i8* getelementptr inbounds ([60 x i8], [60 x i8]* @.str, i64 0, i64 0), i32 %13, i32 %18, i32 %23, i32 %28, i32 %33, i32 %38)
  ret void
}

declare dso_local i32 @dev_err(i32, i8*, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @dchan2dev(i32*) #1

declare dso_local i32 @le64_to_cpu(i32) #1

declare dso_local i32 @le32_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
